tests/positive/Test30.sp
(* Testing expressions *)

main:Double() {
	return 4*5.0;
}

if main() == 0 {
	
}