tests/negative/Test10.sp
(* Wrong type of variable *)
pi:Int = 3.0;